--- a/Juntas_MC/Juntas_MC.csproj
+++ b/Juntas_MC/Juntas_MC.csproj
@@ -94,6 +94,12 @@
     <Compile Include="PL\Marcas.Designer.cs">
       <DependentUpon>Marcas.cs</DependentUpon>
     </Compile>
+    <Compile Include="PL\Mercados.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PL\Mercados.Designer.cs">
+      <DependentUpon>Mercados.cs</DependentUpon>
+    </Compile>
     <Compile Include="PL\Modelos.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -155,6 +161,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PL\Materiales.resx">
       <DependentUpon>Materiales.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PL\Mercados.resx">
+      <DependentUpon>Mercados.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PL\Modelos.resx">
       <DependentUpon>Modelos.cs</DependentUpon>
