--- a/Juntas_MC/App.config
+++ b/Juntas_MC/App.config
@@ -3,4 +3,7 @@
     <startup> 
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
+  <connectionStrings>
+    <add name="MS Access 12" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=C:\BackUp BD\Juntas_MC.accdb" providerName="System.Data.SqlClient"/>
+  </connectionStrings>
 </configuration>
