--- a/Juntas_MC/Juntas_MC.csproj
+++ b/Juntas_MC/Juntas_MC.csproj
@@ -36,6 +36,11 @@
     <ApplicationIcon>iconfinder_Settings_105244.ico</ApplicationIcon>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="AxShockwaveFlashObjects, Version=1.0.0.0, Culture=neutral, PublicKeyToken=692fbea5521e1304" />
+    <Reference Include="CrystalDecisions.CrystalReports.Engine, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.ReportSource, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.Shared, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
+    <Reference Include="CrystalDecisions.Windows.Forms, Version=13.0.4000.0, Culture=neutral, PublicKeyToken=692fbea5521e1304, processorArchitecture=MSIL" />
     <Reference Include="Dapper, Version=2.0.0.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\Dapper.2.0.35\lib\net461\Dapper.dll</HintPath>
     </Reference>
@@ -43,6 +48,9 @@
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.DirectoryServices" />
+    <Reference Include="System.Web" />
+    <Reference Include="System.Web.Services" />
+    <Reference Include="System.Windows.Forms.DataVisualization" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -126,11 +134,29 @@
     <Compile Include="PL\ErrorZoomImgPiezas.Designer.cs">
       <DependentUpon>ErrorZoomImgPiezas.cs</DependentUpon>
     </Compile>
+    <Compile Include="PL\Estadisticas.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PL\Estadisticas.Designer.cs">
+      <DependentUpon>Estadisticas.cs</DependentUpon>
+    </Compile>
     <Compile Include="PL\Facturador.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="PL\Facturador.Designer.cs">
       <DependentUpon>Facturador.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PL\FacturaEliminarDialog.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PL\FacturaEliminarDialog.Designer.cs">
+      <DependentUpon>FacturaEliminarDialog.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PL\FacturasHistorial.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PL\FacturasHistorial.Designer.cs">
+      <DependentUpon>FacturasHistorial.cs</DependentUpon>
     </Compile>
     <Compile Include="PL\ImpresionDialog.cs">
       <SubType>Form</SubType>
@@ -204,11 +230,23 @@
     <Compile Include="PL\PiezasModelos.Designer.cs">
       <DependentUpon>PiezasModelos.cs</DependentUpon>
     </Compile>
+    <Compile Include="PL\rptFactura.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>rptFactura.rpt</DependentUpon>
+      <SubType>Component</SubType>
+    </Compile>
     <Compile Include="PL\TiposDePiezas.cs">
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="PL\TiposDePiezas.Designer.cs">
       <DependentUpon>TiposDePiezas.cs</DependentUpon>
+    </Compile>
+    <Compile Include="PL\VistaPreviaFactura.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PL\VistaPreviaFactura.Designer.cs">
+      <DependentUpon>VistaPreviaFactura.cs</DependentUpon>
     </Compile>
     <Compile Include="PL\ZoomImgPiezas.cs">
       <SubType>Form</SubType>
@@ -242,8 +280,17 @@
     <EmbeddedResource Include="PL\ErrorZoomImgPiezas.resx">
       <DependentUpon>ErrorZoomImgPiezas.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="PL\Estadisticas.resx">
+      <DependentUpon>Estadisticas.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="PL\Facturador.resx">
       <DependentUpon>Facturador.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PL\FacturaEliminarDialog.resx">
+      <DependentUpon>FacturaEliminarDialog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PL\FacturasHistorial.resx">
+      <DependentUpon>FacturasHistorial.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PL\ImpresionDialog.resx">
       <DependentUpon>ImpresionDialog.cs</DependentUpon>
@@ -281,8 +328,15 @@
     <EmbeddedResource Include="PL\PiezasModelos.resx">
       <DependentUpon>PiezasModelos.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="PL\rptFactura.rpt">
+      <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
+      <LastGenOutput>rptFactura.cs</LastGenOutput>
+    </EmbeddedResource>
     <EmbeddedResource Include="PL\TiposDePiezas.resx">
       <DependentUpon>TiposDePiezas.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PL\VistaPreviaFactura.resx">
+      <DependentUpon>VistaPreviaFactura.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PL\ZoomImgPiezas.resx">
       <DependentUpon>ZoomImgPiezas.cs</DependentUpon>
@@ -298,6 +352,7 @@
       <DesignTime>True</DesignTime>
     </Compile>
     <None Include="packages.config" />
+    <None Include="Properties\DataSources\Juntas_MC.BLL.FacturasBLL.datasource" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
@@ -409,7 +464,11 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="iconfinder_Settings_105244.ico" />
+    <None Include="Resources\chart.png" />
     <None Include="Resources\printer.png" />
+  </ItemGroup>
+  <ItemGroup>
+    <Service Include="{C0C07587-41A7-46C8-8FBD-3F9C8EBE2DDC}" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
