Proyecto en beta ver 1.0.0.0

--- a/Juntas_MC/App.config
+++ b/Juntas_MC/App.config
@@ -4,6 +4,7 @@
         <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.7.2" />
     </startup>
   <connectionStrings>
-    <add name="MS Access 12" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=C:\BackUp BD\Juntas_MC.accdb" providerName="System.Data.SqlClient"/>
+    <!--<add name="MS Access 12" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=C:\BackUp BD\Juntas_MC.accdb" providerName="System.Data.SqlClient"/>-->
+    <add name="MS Access 12" connectionString="Provider=Microsoft.ACE.OLEDB.12.0;Data Source=C:\Users\Robert\Documents\Freelance\Juntas_MC_2000.mdb" providerName="System.Data.SqlClient"/>
   </connectionStrings>
 </configuration>
