--- a/Juntas_MC/Juntas_MC.csproj
+++ b/Juntas_MC/Juntas_MC.csproj
@@ -186,6 +186,12 @@
     <Compile Include="PL\ConfigSistema.Designer.cs">
       <DependentUpon>ConfigSistema.cs</DependentUpon>
     </Compile>
+    <Compile Include="PL\ErrorDialogGenerico.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PL\ErrorDialogGenerico.Designer.cs">
+      <DependentUpon>ErrorDialogGenerico.cs</DependentUpon>
+    </Compile>
     <Compile Include="PL\ErrorZoomImgPiezas.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -343,6 +349,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="PL\ConfigSistema.resx">
       <DependentUpon>ConfigSistema.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="PL\ErrorDialogGenerico.resx">
+      <DependentUpon>ErrorDialogGenerico.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="PL\ErrorZoomImgPiezas.resx">
       <DependentUpon>ErrorZoomImgPiezas.cs</DependentUpon>
